# TodoList

Backend/Todo/: .env  pyproject.toml
Backend/Todo/todo/: main.py
Backend/Todo/todo/auth/: auth_bearer.py
